--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,12 @@ List<String> dirs = [
 android {
     signingConfigs {
     }
-    compileSdkVersion 29
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.atstrack.ats.ats_vhf_receiver"
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion 28
+        targetSdkVersion 33
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -82,27 +82,28 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.android.support:gridlayout-v7:29.0.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    /*implementation 'com.android.support:gridlayout-v7:31.0.0'
+    implementation 'com.android.support:recyclerview-v7:31.0.0'*/
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.support:design:29.0.0'
-    implementation 'com.android.support:gridlayout-v7:29.0.0'
-    implementation 'com.android.support:recyclerview-v7:29.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.jakewharton:butterknife:10.0.0'
+    /*implementation 'com.android.support:design:31.0.0'
+    implementation 'com.android.support:gridlayout-v7:31.0.0'
+    implementation 'com.android.support:recyclerview-v7:31.0.0'*/
+    //implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //implementation 'com.jakewharton.timber:timber:5.0.1'
+    //implementation 'com.android.support:support-annotations:28.0.0'
+    //implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'commons-net:commons-net:3.6'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    //annotationProcessor 'com.github.bumptech.glide:compiler:4.11.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.6.0'
     implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0')
             {
                 exclude group: 'org.apache.httpcomponents'
@@ -120,5 +121,6 @@ dependencies {
     implementation('com.microsoft.services.msa:msa-auth:0.8.+')
     implementation('com.microsoft.aad:adal:1.1.+')*/
 
-    implementation 'com.codesgood:justifiedtextview:1.1.0'
+    implementation 'com.codesgood:justifiedtextview:2.0.1'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 }
