--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.atstrack.ats.ats_vhf_receiver">
 
     <application
+        android:exported="true"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
@@ -15,79 +16,104 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ReceiverUpdateActivity"
+            android:exported="true"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".StationaryScanningActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AerialScanningActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TemporaryStationaryActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TemporaryAerialActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ReceiverOptionsActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".SelectValueActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".InputValueActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".StationaryDefaultsActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AerialDefaultsActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TestReceiverActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".CloneReceiverActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".SetTransmitterTypeActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".EditReceiverDefaultsActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ReceiverConfigurationActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".StationaryScanActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AerialScanActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ManualScanActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".StartScanningActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainMenuActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".EditTablesActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".TableOverviewActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".GetDataActivity"
+            android:exported="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"
+                    android:exported="true"/>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -95,28 +121,38 @@
 
         <service
             android:name=".BluetoothATS.BluetoothLeService"
-            android:enabled="true" />
+            android:exported="false"
+            android:enabled="true"
+            android:permission="TODO" />
     </application>
     <uses-feature
         android:name="android.hardware.bluetooth_le"
-        android:required="true" />
+        android:required="true"
+        tools:ignore="ManifestOrder" />
 
     <uses-feature
         android:name="android.hardware.location.gps"
         android:required="true" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH"
+        android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"
+        android:maxSdkVersion="30"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_MEDIA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission
         android:name="android.permission.WRITE_SECURE_SETTINGS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
