--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".Acoustic.MainActivity2"
+            android:exported="false" />
+        <activity
             android:name=".VHF.EnterCoefficientActivity"
             android:exported="false" />
         <activity
