--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <!--uses-permission android:name="android.permission.MANAGE_DOCUMENTS"/-->
 
     <application
         android:allowBackup="true"
@@ -46,9 +47,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".Acoustic.MainActivity2"
-            android:exported="false" />
         <activity
             android:name=".VHF.EnterCoefficientActivity"
             android:exported="false" />
